fix background color in dark mode

--- a/app/styles/_main.scss
+++ b/app/styles/_main.scss
@@ -3,6 +3,7 @@ html{
   overflow-y: scroll;
   height: 100%;
   box-sizing: border-box;
+  background-color: inherit;
 }
 
 body{
